--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,21 @@ IPS-threads/
 Project_1/.vscode/
 .vscode/launch.json
 .vscode/settings.json
+.gitignore
+.vscode
+.gitignore
+.vscode/launch.json
+.vscode/settings.json
+Project_1/correct_output
+Project_1/deadlock_test.sh
+Project_1/example
+Project_1/group
+Project_1/kompilace.txt
+Project_1/short_input
+Project_1/sudoers
+Project_1/tests.txt
+Project_1/tmp_soubor
+.vscode/settings.json
+.vscode/launch.json
+.vscode/launch.json
+.vscode/settings.json
